--- a/cfl-api/package.json
+++ b/cfl-api/package.json
@@ -11,11 +11,10 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "fs": "^0.0.1-security"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "fs": "0.0.1-security"
   }
 }
